actualización de código parte 6